@@ -21,9 +21,3 @@ struct cutoff_module
 	char *networks;
 	char *excluded_networks;
 };
-
-#ifdef USE_PGSQL
-#define BROADCAST "cast(cast(net.address as bit(32)) | ~ cast(inet_aton(net.mask) as bit(32)) as bigint)"
-#else
-#define BROADCAST "net.address | 4294967295>>bit_count(inet_aton(net.mask))"
-#endif
